--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BASE_URL="http://localhost:3000"
-NEXTAUTH_URL="http://localhost:3000"
+BASE_URL="http://real-state-puce-eta.vercel.app"
+NEXTAUTH_URL="http://real-state-puce-eta.vercel.app"
 NEXTAUTH_SECRET="supersecret"
 MONGO_USER=nina
 MONGO_PASS=12345
